[tool.poetry]
name = "api-service"
version = "0.1.0"
description = ""
authors = ["xrainie <xoxrainie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.31"}
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
